[package]
name = "dfblocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.145"
serde_json = "1.0"
reqwest = {version =  "0.11.11", features = ["blocking"]}
serde_derive = "1.0.145"
chrono = "0.4"
tokio = { version = "1.21.2", features = ["full"] }
rand = "0.8.5"